fixed photo alignment and size

--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -246,7 +246,7 @@ header .downlad-btn:hover{
 .projectsContainer{
     text-align: center; }
 
-.p-item img{ width: 50%}
+.p-item img{ width: 20em}
 
 .projects-section{ 
     background: #515a68; color: #fff; }
